--- a/Notebook/Heart_disease_group_project.ipynb
+++ b/Notebook/Heart_disease_group_project.ipynb
@@ -7,6 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18bd2f95",
+   "metadata": {},
+   "source": [
+    "We can use this notebook to clean the csv."
+   ]
   }
  ],
  "metadata": {
