--- a/Notebook/Heart_disease_group_project.ipynb
+++ b/Notebook/Heart_disease_group_project.ipynb
@@ -1,19 +1,57 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5bdd72f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "18bd2f95",
+   "id": "ee4b9fd4",
    "metadata": {},
    "source": [
-    "We can use this notebook to clean the csv."
+    "One-Hot-Encoding Step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f5bdd72f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  HeartDisease    BMI Smoking AlcoholDrinking Stroke  PhysicalHealth  \\\n",
+      "0           No  16.60     Yes              No     No             3.0   \n",
+      "1           No  20.34      No              No    Yes             0.0   \n",
+      "2           No  26.58     Yes              No     No            20.0   \n",
+      "3           No  24.21      No              No     No             0.0   \n",
+      "4           No  23.71      No              No     No            28.0   \n",
+      "\n",
+      "   MentalHealth DiffWalking     Sex  AgeCategory   Race Diabetic  \\\n",
+      "0          30.0          No  Female        55-59  White      Yes   \n",
+      "1           0.0          No  Female  80 or older  White       No   \n",
+      "2          30.0          No    Male        65-69  White      Yes   \n",
+      "3           0.0          No  Female        75-79  White       No   \n",
+      "4           0.0         Yes  Female        40-44  White       No   \n",
+      "\n",
+      "  PhysicalActivity  GenHealth  SleepTime Asthma KidneyDisease SkinCancer  \n",
+      "0              Yes  Very good        5.0    Yes            No        Yes  \n",
+      "1              Yes  Very good        7.0     No            No         No  \n",
+      "2              Yes       Fair        8.0    Yes            No         No  \n",
+      "3               No       Good        6.0     No            No        Yes  \n",
+      "4              Yes  Very good        8.0     No            No         No  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#one hot encode\n",
+    "from numpy import array \n",
+    "from numpy import argmax \n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder \n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    " \n",
+    "df = pd.read_csv(r\"https://raw.githubusercontent.com/ECS-170/Heart-Disease-ML-Project/main/Raw_data/heart_2020.csv?token=GHSAT0AAAAAABT7CNQXGBIL6RF5DIUOUSDGYTJX4KQ\")\n",
+    "print(df.head())\n",
+    "#Raw_data\\heart_2020.csv"
    ]
   }
  ],
