--- a/Notebook/Heart_disease_group_project.ipynb
+++ b/Notebook/Heart_disease_group_project.ipynb
@@ -1,6 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "066453c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All project imports\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import OrdinalEncoder \n",
+    "from sklearn.preprocessing import OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "b200e395",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HeartDisease ->  ['No' 'Yes']\n",
+      "BMI ->  [16.6  20.34 26.58 ... 62.42 51.46 46.56]\n",
+      "Smoking ->  ['Yes' 'No']\n",
+      "AlcoholDrinking ->  ['No' 'Yes']\n",
+      "Stroke ->  ['No' 'Yes']\n",
+      "PhysicalHealth ->  [ 3.  0. 20. 28.  6. 15.  5. 30.  7.  1.  2. 21.  4. 10. 14. 18.  8. 25.\n",
+      " 16. 29. 27. 17. 24. 12. 23. 26. 22. 19.  9. 13. 11.]\n",
+      "MentalHealth ->  [30.  0.  2.  5. 15.  8.  4.  3. 10. 14. 20.  1.  7. 24.  9. 28. 16. 12.\n",
+      "  6. 25. 17. 18. 21. 29. 22. 13. 23. 27. 26. 11. 19.]\n",
+      "DiffWalking ->  ['No' 'Yes']\n",
+      "Sex ->  ['Female' 'Male']\n",
+      "AgeCategory ->  ['55-59' '80 or older' '65-69' '75-79' '40-44' '70-74' '60-64' '50-54'\n",
+      " '45-49' '18-24' '35-39' '30-34' '25-29']\n",
+      "Race ->  ['White' 'Black' 'Asian' 'American Indian/Alaskan Native' 'Other'\n",
+      " 'Hispanic']\n",
+      "Diabetic ->  ['Yes' 'No' 'No, borderline diabetes' 'Yes (during pregnancy)']\n",
+      "PhysicalActivity ->  ['Yes' 'No']\n",
+      "GenHealth ->  ['Very good' 'Fair' 'Good' 'Poor' 'Excellent']\n",
+      "SleepTime ->  [ 5.  7.  8.  6. 12.  4.  9. 10. 15.  3.  2.  1. 16. 18. 14. 20. 11. 13.\n",
+      " 17. 24. 19. 21. 22. 23.]\n",
+      "Asthma ->  ['Yes' 'No']\n",
+      "KidneyDisease ->  ['No' 'Yes']\n",
+      "SkinCancer ->  ['Yes' 'No']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the dataset\n",
+    "df = pd.read_csv(\"../Raw_data/heart_2020.csv\")\n",
+    "# Print the name of each column, as well as the unique values found in each column\n",
+    "for column in df:\n",
+    "    print(\"%s -> \" % (column), df[column].unique())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ee4b9fd4",
    "metadata": {},
@@ -10,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "id": "f5bdd72f",
    "metadata": {},
    "outputs": [
@@ -18,40 +76,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  HeartDisease    BMI Smoking AlcoholDrinking Stroke  PhysicalHealth  \\\n",
-      "0           No  16.60     Yes              No     No             3.0   \n",
-      "1           No  20.34      No              No    Yes             0.0   \n",
-      "2           No  26.58     Yes              No     No            20.0   \n",
-      "3           No  24.21      No              No     No             0.0   \n",
-      "4           No  23.71      No              No     No            28.0   \n",
+      "['Smoking_Yes' 'AlcoholDrinking_Yes' 'Stroke_Yes' 'DiffWalking_Yes'\n",
+      " 'Sex_Male' 'Race_American Indian/Alaskan Native' 'Race_Asian'\n",
+      " 'Race_Black' 'Race_Hispanic' 'Race_Other' 'Race_White' 'Diabetic_No'\n",
+      " 'Diabetic_No, borderline diabetes' 'Diabetic_Yes'\n",
+      " 'Diabetic_Yes (during pregnancy)' 'PhysicalActivity_Yes' 'Asthma_Yes'\n",
+      " 'KidneyDisease_Yes' 'SkinCancer_Yes']\n",
+      "  HeartDisease   BMI  PhysicalHealth  MentalHealth AgeCategory  GenHealth  \\\n",
+      "0           No  16.6             3.0          30.0       55-59  Very good   \n",
       "\n",
-      "   MentalHealth DiffWalking     Sex  AgeCategory   Race Diabetic  \\\n",
-      "0          30.0          No  Female        55-59  White      Yes   \n",
-      "1           0.0          No  Female  80 or older  White       No   \n",
-      "2          30.0          No    Male        65-69  White      Yes   \n",
-      "3           0.0          No  Female        75-79  White       No   \n",
-      "4           0.0         Yes  Female        40-44  White       No   \n",
+      "   SleepTime  Smoking_Yes  AlcoholDrinking_Yes  Stroke_Yes  ...  Race_Other  \\\n",
+      "0        5.0          1.0                  0.0         0.0  ...         0.0   \n",
       "\n",
-      "  PhysicalActivity  GenHealth  SleepTime Asthma KidneyDisease SkinCancer  \n",
-      "0              Yes  Very good        5.0    Yes            No        Yes  \n",
-      "1              Yes  Very good        7.0     No            No         No  \n",
-      "2              Yes       Fair        8.0    Yes            No         No  \n",
-      "3               No       Good        6.0     No            No        Yes  \n",
-      "4              Yes  Very good        8.0     No            No         No  \n"
+      "   Race_White  Diabetic_No  Diabetic_No, borderline diabetes  Diabetic_Yes  \\\n",
+      "0         1.0          0.0                               0.0           1.0   \n",
+      "\n",
+      "   Diabetic_Yes (during pregnancy)  PhysicalActivity_Yes  Asthma_Yes  \\\n",
+      "0                              0.0                   1.0         1.0   \n",
+      "\n",
+      "   KidneyDisease_Yes  SkinCancer_Yes  \n",
+      "0                0.0             1.0  \n",
+      "\n",
+      "[1 rows x 26 columns]\n"
      ]
     }
    ],
    "source": [
-    "#one hot encode\n",
-    "from numpy import array \n",
-    "from numpy import argmax \n",
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder \n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    " \n",
-    "df = pd.read_csv(r\"https://raw.githubusercontent.com/ECS-170/Heart-Disease-ML-Project/main/Raw_data/heart_2020.csv?token=GHSAT0AAAAAABT7CNQXGBIL6RF5DIUOUSDGYTJX4KQ\")\n",
-    "print(df.head())\n",
-    "#Raw_data\\heart_2020.csv"
+    "# One-hot encode categorical attributes in the dataset\n",
+    "\n",
+    "# List of all attribute that we wish to one-hot encode or binary encode\n",
+    "categorical_attributes = [\"Smoking\", \"AlcoholDrinking\", \"Stroke\", \"DiffWalking\", \"Sex\", \"Race\", \"Diabetic\", \"PhysicalActivity\", \"Asthma\", \"KidneyDisease\", \"SkinCancer\"]\n",
+    "# If an attribute has only two categories, only create one new attribute when encoding it.\n",
+    "# Normally, one-hot encoding would create two new attributes for binary categories.\n",
+    "encoder = OneHotEncoder(drop=\"if_binary\")\n",
+    "# Generate an encoding scheme for the specified columns\n",
+    "encoder.fit(df[categorical_attributes])\n",
+    "# Print the names of all the new attributes created by the one-hot encoder\n",
+    "print(encoder.get_feature_names_out(categorical_attributes))\n",
+    "# Replace the categorical columns in the DataFrame with the new, one-hot encoded columns\n",
+    "encoded_df = pd.DataFrame(encoder.transform(df[categorical_attributes]).toarray(), columns=encoder.get_feature_names_out(categorical_attributes))\n",
+    "df = df.drop(columns=categorical_attributes).join(encoded_df)\n",
+    "print(df.head(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bb79845",
+   "metadata": {},
+   "source": [
+    "Ordinal Encoding Step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "d014fddb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  HeartDisease   BMI  PhysicalHealth  MentalHealth  SleepTime  Smoking_Yes  \\\n",
+      "0           No  16.6             3.0          30.0        5.0          1.0   \n",
+      "\n",
+      "   AlcoholDrinking_Yes  Stroke_Yes  DiffWalking_Yes  Sex_Male  ...  \\\n",
+      "0                  0.0         0.0              0.0       0.0  ...   \n",
+      "\n",
+      "   Diabetic_No  Diabetic_No, borderline diabetes  Diabetic_Yes  \\\n",
+      "0          0.0                               0.0           1.0   \n",
+      "\n",
+      "   Diabetic_Yes (during pregnancy)  PhysicalActivity_Yes  Asthma_Yes  \\\n",
+      "0                              0.0                   1.0         1.0   \n",
+      "\n",
+      "   KidneyDisease_Yes  SkinCancer_Yes  AgeCategory_Ordinal  GenHealth_Ordinal  \n",
+      "0                0.0             1.0                  7.0                3.0  \n",
+      "\n",
+      "[1 rows x 26 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Encode categorical attributes that have a logical ordering. Since such an ordering exists,\n",
+    "# we can avoid creating extraneous columns by assigning a number to each category, rather than\n",
+    "# trying to use a one-hot encoding scheme for them.\n",
+    "\n",
+    "# There are only two categorical attributes which have a logical ordering\n",
+    "categorical_attributes = [\"AgeCategory\", \"GenHealth\"]\n",
+    "# List the possible categories for each attribute in their logical order\n",
+    "age_categories = [\"18-24\", \"25-29\", \"30-34\", \"35-39\", \"40-44\", \"45-49\", \"50-54\", \"55-59\", \"60-64\", \"65-69\", \"70-74\", \"75-79\", \"80 or older\"]\n",
+    "health_categories = [\"Poor\", \"Fair\", \"Good\", \"Very good\", \"Excellent\"]\n",
+    "# Create the ordinal encoder and generate the encoding scheme for our DataFrame\n",
+    "encoder = OrdinalEncoder(categories=[age_categories, health_categories])\n",
+    "encoder.fit(df[categorical_attributes])\n",
+    "# Replace the categorical columns in the DataFrame with the new, ordinal-encoded columns\n",
+    "encoded_df = pd.DataFrame(encoder.transform(df[categorical_attributes]), columns=[\"AgeCategory_Ordinal\", \"GenHealth_Ordinal\"])\n",
+    "df = df.drop(columns=categorical_attributes).join(encoded_df)\n",
+    "print(df.head(1))"
    ]
   }
  ],
@@ -71,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
