Testing write permissions
Making sure all members have the ability to write rather than just the admin.

--- a/Examples/Binary_Encode_Example/Binary_encode_example.ipynb
+++ b/Examples/Binary_Encode_Example/Binary_encode_example.ipynb
@@ -140,7 +140,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Hopefully that helps."
+   ]
   }
  ],
  "metadata": {
