binary encoded HeartDisease attribute

--- a/Notebook/Heart_disease_group_project.ipynb
+++ b/Notebook/Heart_disease_group_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "066453c4",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "b200e395",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "f5bdd72f",
    "metadata": {},
    "outputs": [
@@ -76,26 +76,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Smoking_Yes' 'AlcoholDrinking_Yes' 'Stroke_Yes' 'DiffWalking_Yes'\n",
-      " 'Sex_Male' 'Race_American Indian/Alaskan Native' 'Race_Asian'\n",
-      " 'Race_Black' 'Race_Hispanic' 'Race_Other' 'Race_White' 'Diabetic_No'\n",
-      " 'Diabetic_No, borderline diabetes' 'Diabetic_Yes'\n",
+      "['HeartDisease_Yes' 'Smoking_Yes' 'AlcoholDrinking_Yes' 'Stroke_Yes'\n",
+      " 'DiffWalking_Yes' 'Sex_Male' 'Race_American Indian/Alaskan Native'\n",
+      " 'Race_Asian' 'Race_Black' 'Race_Hispanic' 'Race_Other' 'Race_White'\n",
+      " 'Diabetic_No' 'Diabetic_No, borderline diabetes' 'Diabetic_Yes'\n",
       " 'Diabetic_Yes (during pregnancy)' 'PhysicalActivity_Yes' 'Asthma_Yes'\n",
       " 'KidneyDisease_Yes' 'SkinCancer_Yes']\n",
-      "  HeartDisease   BMI  PhysicalHealth  MentalHealth AgeCategory  GenHealth  \\\n",
-      "0           No  16.6             3.0          30.0       55-59  Very good   \n",
+      "    BMI  PhysicalHealth  MentalHealth AgeCategory  GenHealth  SleepTime  \\\n",
+      "0  16.6             3.0          30.0       55-59  Very good        5.0   \n",
       "\n",
-      "   SleepTime  Smoking_Yes  AlcoholDrinking_Yes  Stroke_Yes  ...  Race_Other  \\\n",
-      "0        5.0          1.0                  0.0         0.0  ...         0.0   \n",
+      "   HeartDisease_Yes  Smoking_Yes  AlcoholDrinking_Yes  Stroke_Yes  ...  \\\n",
+      "0               0.0          1.0                  0.0         0.0  ...   \n",
       "\n",
-      "   Race_White  Diabetic_No  Diabetic_No, borderline diabetes  Diabetic_Yes  \\\n",
-      "0         1.0          0.0                               0.0           1.0   \n",
+      "   Race_Other  Race_White  Diabetic_No  Diabetic_No, borderline diabetes  \\\n",
+      "0         0.0         1.0          0.0                               0.0   \n",
       "\n",
-      "   Diabetic_Yes (during pregnancy)  PhysicalActivity_Yes  Asthma_Yes  \\\n",
-      "0                              0.0                   1.0         1.0   \n",
+      "   Diabetic_Yes  Diabetic_Yes (during pregnancy)  PhysicalActivity_Yes  \\\n",
+      "0           1.0                              0.0                   1.0   \n",
       "\n",
-      "   KidneyDisease_Yes  SkinCancer_Yes  \n",
-      "0                0.0             1.0  \n",
+      "   Asthma_Yes  KidneyDisease_Yes  SkinCancer_Yes  \n",
+      "0         1.0                0.0             1.0  \n",
       "\n",
       "[1 rows x 26 columns]\n"
      ]
@@ -105,7 +105,7 @@
     "# One-hot encode categorical attributes in the dataset\n",
     "\n",
     "# List of all attribute that we wish to one-hot encode or binary encode\n",
-    "categorical_attributes = [\"Smoking\", \"AlcoholDrinking\", \"Stroke\", \"DiffWalking\", \"Sex\", \"Race\", \"Diabetic\", \"PhysicalActivity\", \"Asthma\", \"KidneyDisease\", \"SkinCancer\"]\n",
+    "categorical_attributes = [\"HeartDisease\", \"Smoking\", \"AlcoholDrinking\", \"Stroke\", \"DiffWalking\", \"Sex\", \"Race\", \"Diabetic\", \"PhysicalActivity\", \"Asthma\", \"KidneyDisease\", \"SkinCancer\"]\n",
     "# If an attribute has only two categories, only create one new attribute when encoding it.\n",
     "# Normally, one-hot encoding would create two new attributes for binary categories.\n",
     "encoder = OneHotEncoder(drop=\"if_binary\")\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "d014fddb",
    "metadata": {},
    "outputs": [
@@ -137,14 +137,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  HeartDisease   BMI  PhysicalHealth  MentalHealth  SleepTime  Smoking_Yes  \\\n",
-      "0           No  16.6             3.0          30.0        5.0          1.0   \n",
+      "    BMI  PhysicalHealth  MentalHealth  SleepTime  HeartDisease_Yes  \\\n",
+      "0  16.6             3.0          30.0        5.0               0.0   \n",
       "\n",
-      "   AlcoholDrinking_Yes  Stroke_Yes  DiffWalking_Yes  Sex_Male  ...  \\\n",
-      "0                  0.0         0.0              0.0       0.0  ...   \n",
+      "   Smoking_Yes  AlcoholDrinking_Yes  Stroke_Yes  DiffWalking_Yes  Sex_Male  \\\n",
+      "0          1.0                  0.0         0.0              0.0       0.0   \n",
       "\n",
-      "   Diabetic_No  Diabetic_No, borderline diabetes  Diabetic_Yes  \\\n",
-      "0          0.0                               0.0           1.0   \n",
+      "   ...  Diabetic_No  Diabetic_No, borderline diabetes  Diabetic_Yes  \\\n",
+      "0  ...          0.0                               0.0           1.0   \n",
       "\n",
       "   Diabetic_Yes (during pregnancy)  PhysicalActivity_Yes  Asthma_Yes  \\\n",
       "0                              0.0                   1.0         1.0   \n",
