Dropped unneeded columns and standardized
Dropped unneeded columns PhysicalHealth, MentalHealth, and SleepTime. Also standardized column BMI with min-max scaling.

--- a/Notebook/Heart_disease_group_project.ipynb
+++ b/Notebook/Heart_disease_group_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "066453c4",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import OrdinalEncoder \n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import minmax_scale"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b200e395",
    "metadata": {},
    "outputs": [
@@ -53,6 +54,8 @@
    "source": [
     "# Load the dataset\n",
     "df = pd.read_csv(\"../Raw_data/heart_2020.csv\")\n",
+    "# Drop columns that are not important to the dataset\n",
+    "df.drop(columns=[\"PhysicalHealth\", \"MentalHealth\", \"SleepTime\"])\n",
     "# Print the name of each column, as well as the unique values found in each column\n",
     "for column in df:\n",
     "    print(\"%s -> \" % (column), df[column].unique())"
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "f5bdd72f",
    "metadata": {},
    "outputs": [
@@ -82,20 +85,23 @@
       " 'Diabetic_No' 'Diabetic_No, borderline diabetes' 'Diabetic_Yes'\n",
       " 'Diabetic_Yes (during pregnancy)' 'PhysicalActivity_Yes' 'Asthma_Yes'\n",
       " 'KidneyDisease_Yes' 'SkinCancer_Yes']\n",
-      "    BMI  PhysicalHealth  MentalHealth AgeCategory  GenHealth  SleepTime  \\\n",
-      "0  16.6             3.0          30.0       55-59  Very good        5.0   \n",
+      "        BMI  PhysicalHealth  MentalHealth  SleepTime  AgeCategory_Ordinal  \\\n",
+      "0  0.055294             3.0          30.0        5.0                  7.0   \n",
       "\n",
-      "   HeartDisease_Yes  Smoking_Yes  AlcoholDrinking_Yes  Stroke_Yes  ...  \\\n",
-      "0               0.0          1.0                  0.0         0.0  ...   \n",
+      "   GenHealth_Ordinal  HeartDisease_Yes  Smoking_Yes  AlcoholDrinking_Yes  \\\n",
+      "0                3.0               0.0          1.0                  0.0   \n",
       "\n",
-      "   Race_Other  Race_White  Diabetic_No  Diabetic_No, borderline diabetes  \\\n",
-      "0         0.0         1.0          0.0                               0.0   \n",
+      "   Stroke_Yes  ...  Race_Other  Race_White  Diabetic_No  \\\n",
+      "0         0.0  ...         0.0         1.0          0.0   \n",
       "\n",
-      "   Diabetic_Yes  Diabetic_Yes (during pregnancy)  PhysicalActivity_Yes  \\\n",
-      "0           1.0                              0.0                   1.0   \n",
+      "   Diabetic_No, borderline diabetes  Diabetic_Yes  \\\n",
+      "0                               0.0           1.0   \n",
       "\n",
-      "   Asthma_Yes  KidneyDisease_Yes  SkinCancer_Yes  \n",
-      "0         1.0                0.0             1.0  \n",
+      "   Diabetic_Yes (during pregnancy)  PhysicalActivity_Yes  Asthma_Yes  \\\n",
+      "0                              0.0                   1.0         1.0   \n",
+      "\n",
+      "   KidneyDisease_Yes  SkinCancer_Yes  \n",
+      "0                0.0             1.0  \n",
       "\n",
       "[1 rows x 26 columns]\n"
      ]
@@ -129,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "d014fddb",
    "metadata": {},
    "outputs": [
@@ -137,22 +143,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    BMI  PhysicalHealth  MentalHealth  SleepTime  HeartDisease_Yes  \\\n",
-      "0  16.6             3.0          30.0        5.0               0.0   \n",
+      "  HeartDisease   BMI Smoking AlcoholDrinking Stroke  PhysicalHealth  \\\n",
+      "0           No  16.6     Yes              No     No             3.0   \n",
       "\n",
-      "   Smoking_Yes  AlcoholDrinking_Yes  Stroke_Yes  DiffWalking_Yes  Sex_Male  \\\n",
-      "0          1.0                  0.0         0.0              0.0       0.0   \n",
+      "   MentalHealth DiffWalking     Sex   Race Diabetic PhysicalActivity  \\\n",
+      "0          30.0          No  Female  White      Yes              Yes   \n",
       "\n",
-      "   ...  Diabetic_No  Diabetic_No, borderline diabetes  Diabetic_Yes  \\\n",
-      "0  ...          0.0                               0.0           1.0   \n",
+      "   SleepTime Asthma KidneyDisease SkinCancer  AgeCategory_Ordinal  \\\n",
+      "0        5.0    Yes            No        Yes                  7.0   \n",
       "\n",
-      "   Diabetic_Yes (during pregnancy)  PhysicalActivity_Yes  Asthma_Yes  \\\n",
-      "0                              0.0                   1.0         1.0   \n",
-      "\n",
-      "   KidneyDisease_Yes  SkinCancer_Yes  AgeCategory_Ordinal  GenHealth_Ordinal  \n",
-      "0                0.0             1.0                  7.0                3.0  \n",
-      "\n",
-      "[1 rows x 26 columns]\n"
+      "   GenHealth_Ordinal  \n",
+      "0                3.0  \n"
      ]
     }
    ],
@@ -174,6 +175,43 @@
     "df = df.drop(columns=categorical_attributes).join(encoded_df)\n",
     "print(df.head(1))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20974893",
+   "metadata": {},
+   "source": [
+    "Standardize BMI column using min-max scaling. Only one column affected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2f1c10e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  HeartDisease       BMI Smoking AlcoholDrinking Stroke  PhysicalHealth  \\\n",
+      "0           No  0.055294     Yes              No     No             3.0   \n",
+      "\n",
+      "   MentalHealth DiffWalking     Sex   Race Diabetic PhysicalActivity  \\\n",
+      "0          30.0          No  Female  White      Yes              Yes   \n",
+      "\n",
+      "   SleepTime Asthma KidneyDisease SkinCancer  AgeCategory_Ordinal  \\\n",
+      "0        5.0    Yes            No        Yes                  7.0   \n",
+      "\n",
+      "   GenHealth_Ordinal  \n",
+      "0                3.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df[['BMI']] = minmax_scale(df[['BMI']])\n",
+    "print(df.head(1))"
+   ]
   }
  ],
  "metadata": {
@@ -192,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
